--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-<h1> oi </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="visual/favicon.ico" type="image/x-icon">
+    <title>GroupFinder</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <div class="telegram-icon"> 
+        <img src="visual/telegram.png" alt="Ícone Telegram">
+    </div>
+    <div class="whatsapp-icon"> 
+        <img src="visual/whatsapp.png" alt="Ícone WhatsApp">
+    </div>
+    <div class="search-box">
+        <input type="text" class="search-text" placeholder="Pesquisar..." data-search-whatsapp>
+        <a class="search-btn" lupas-whats>
+            <img class="loupe-blue" src="visual/loupe-blue.svg" alt="" width="25px" height="25px">
+            <img class="loupe-white" src="visual/loupe-white.svg" alt="" width="25px" height="25px">
+        </a>
+    </div>
+    <div class="search-box2">
+        <input type="text" class="search-text2" placeholder="Pesquisar..." data-search-telegram="">
+        <a class="search-btn2" lupas-telegram> 
+            <img class="loupe-blue2" src="visual/loupe-blue.svg" alt="" width="25px" height="25px">
+            <img class="loupe-white2" src="visual/loupe-white.svg" alt="" width="25px" height="25px">
+        </a>
+    </div>
+
+    <div class="user-cards-whatsapp" data-user-cards-container-whatsapp>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>PALPITES VIP ONN 26</div>
+            <a class="body" href="https://chat.whatsapp.com/DI29GdQa7FP65jB0sVgEx4" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>SEGUIDORES INSTAGRAM 🔥🚀</div>
+            <a class="body" href="https://chat.whatsapp.com/IL92SVtSB286wKZ0LzWrjD" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Promoções lojas Virtuais</div>
+            <a class="body" href="https://chat.whatsapp.com/Cbui5zDvqOE0Wu6Fse1IQG" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>🍓REFÚGIO DAS E-GIRLS💋</div>
+            <a class="body" href="https://chat.whatsapp.com/GjkSQDDycLO3Buk5J8jfRR" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>GRUPO💙 FREE 💙WINMI 💰✅👊🏻🧳</div>
+            <a class="body" href="https://chat.whatsapp.com/Cv2hcoEn4DG8yhnQyKh2RH" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>COMUNIDADE MV🖤</div>
+            <a class="body" href="https://chat.whatsapp.com/LZ6YpWP3ahGDWlBbxk7dZb" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Notícias gerais 🌎🗞️📰</div>
+            <a class="body" href="https://chat.whatsapp.com/CD1Gh9OcPWd7lTfG7FL7di" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Loucos por Figurinhas 😝</div>
+            <a class="body" href="https://chat.whatsapp.com/G8IifwEmQhk0zYplx7MRRD" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Armário</div>
+            <a class="body" href="https://chat.whatsapp.com/BevHh5MyqNK3V2GSQmPPHw" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Grupo de Ofertas - ilg viagens ✈️🧳</div>
+            <a class="body" href="https://chat.whatsapp.com/BZU5lZGFI3qEsjlM0Ix55I" data-body target=_blank>Entrar no grupo</a>
+        </div>
+    </div>
+    <div class="user-cards-tele" data-user-cards-container-telegram>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Shopee | Achados, Cupons e Descontos</div>
+            <a class="body" href="https://t.me/+ycEF0DCPe1JkM2Zh" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>BLISS SINAIS DOUBLE BLAZE FREE 🎰🔥</div>
+            <a class="body" href="https://t.me/+3AAh6hspvMU4N2Nh" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>BOOT GREEN AVIATOR</div>
+            <a class="body" href="https://t.me/bootgreenaviatorr" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>FORTUNE TIGER 100% DE ACERTO</div>
+            <a class="body" href="https://t.me/+8Bu8ERYff941ZjUx" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>SPACEMAN 🚀🚀VELA ALTA GREEN PREMIUM</div>
+            <a class="body" href="https://t.me/spacemanvelaaltapremium" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>HT Mestre | Futebol</div>
+            <a class="body" href="https://t.me/htmestre" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>INSTA MONEY - SAQUE ATÉ R$300 POR DIA🤑</div>
+            <a class="body" href="HT Mestre | Futebol" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Filmes e Séries - Tudo em 1 só lugar 🍿</div>
+            <a class="body" href="https://t.me/deusdosfilmes" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>Canais Filmes Séries 🎥</div>
+            <a class="body" href="https://t.me/CanaisFilmesSerie" data-body target=_blank>Entrar no grupo</a>
+        </div>
+        <div class="card" cardDoGrupo>
+            <div class="header" data-header-gr>PETROLINA RIFAS</div>
+            <a class="body" href="https://t.me/+_MqENRQjKdo3YmVh" data-body target=_blank>Entrar no grupo</a>
+        </div>
+    </div>
+    
+</body>
+</html>
